<resources>
    <string name="cargo_app_name">My Library</string>
    <string name="main_app_name">畅通车友会</string>
    <string name="main_app_title_welcome">欢迎加入畅通车友会</string>
    <string name="main_app_about">畅通车友会APP是由中国工商银行上海分行和工银安盛人寿保险有限公司联合开发，
        以违章缴费、车辆服务和保险服务为切入点，为广大的上海司机朋友提供优质服务。</string>
    <string name="main_app_about_2">畅通车友会APP数据与上海交通总队实时同步，确保数据准确。</string>
    <string name="main_app_help">畅通车友会App使用问题帮助:</string>
    <string name="refreshing">正在刷新…</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载…</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="refreshing_nomal">获取数据中…</string>
    <string name="common_back">返回</string>
    <string name="common_empty">暂无数据，下拉刷新试试</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_history_summary">Store your scans in History</string>
    <string name="preferences_history_title">Add to History</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_orientation_title">No automatic rotation</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_search_country">Search country</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="result_address_book">Found contact info</string>
    <string name="result_calendar">Found calendar event</string>
    <string name="result_email_address">Found email address</string>
    <string name="result_geo">Found geographic coordinates</string>
    <string name="result_isbn">Found book</string>
    <string name="result_product">Found product</string>
    <string name="result_sms">Found SMS address</string>
    <string name="result_tel">Found phone number</string>
    <string name="result_text">Found plain text</string>
    <string name="result_uri">Found URL</string>
    <string name="result_wifi">Found WLAN Configuration</string>
    <string name="sbc_name">Google Book Search</string>
    <string name="wifi_changing_network">Requesting connection to network\u2026</string>
    <string name="dialog_select_date_hint">请对照驾驶证上的初次领证日期进行选择，以免造成数据错误</string>
    <string name="errcode_success">分享成功</string>
    <string name="errcode_cancel">分享取消</string>
    <string name="sent_failed">发送失败</string>
    <string name="errcode_deny">分享被拒绝</string>
    <string name="errcode_unknown">分享返回</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="phone_num"><u>95588</u></string>
    <string name="recharge_agreement_content">\n&#160;&#160;&#160;&#160;本协议是使用畅通车友会的车主（以下简称车主）和畅通车友会就账户充值等相关事宜所订立的油卡充值服务协议，请您仔细阅读本协议，您勾选“我已阅读并同意《油卡充值协议》”复选框后，即表示完全接受本协议项下的全部条款，本协议即构成对双方有约束力的法律文件。
\n\n一、协议声明\n\n
1、畅通车友会通过互联网依法为用户提供油卡充值、订单查询等服务，用户在完全同意本协议及畅通车友会规定的情况下，方有权使用畅通车友会的油卡充值服务。
2、您勾选充值页面中的“我已阅读并同意《油卡充值协议》”复选框后，即视为您已阅读、了解、并完全同意本协议的各项内容，并具有独立承担法律责任的能力。畅通车友会对于未成年用户使用本服务过程中的行为，以及因其使用本服务而产生的一切后果不承担任何责任。
3、畅通车友会在必要时可修改本协议，并在畅通车友会软件内进行公告，即公告之日起生效。如您继续使用畅通车友会账户充值服务，则视为您已接受修改后的油卡充值协议。
\n\n二、服务说明\n\n
1、畅通车友会通过互联网依法为用户提供油卡充值、订单查询等服务，用户在完全同意本协议及畅通车友会规定的情况下，方有权使用畅通车友会的油卡充值服务。
2、车主需完成畅通车友会注册，即可启用畅通车友会账户充值服务。
3、油卡充值完成后，到账可能有一定时间延时，望您理解等待。
4、使用畅通车友会油卡充值支付油卡金额的发票需到加油油站索取，发票金额为用户实付金额。
\n\n三、免责声明\n\n
　　包括但不仅限于下列情况发生时，畅通车友会将不承担任何责任：
1、用户因使用第三方支付渠道充值过程中发生的相关争议。
2、由于用户将密码告知他人导致的用户财产损失。
3、因用户个人故意或重大过失，或本协议之外的第三方所造成的用户财产损失。
4、由不可抗力及不可预见的情势导致的各种情况和纠纷造成畅通车友会未能及时、准确、完整的提供账户充值服务；不可抗力和不可预见情况包括：系统故障、恶意黑客攻击、电信部门技术调整导致重大影响、政府管制导致的暂时关闭、病毒侵袭。
5、用户同意保障和维护畅通车友会及其他用户的利益，如因用户违反有关法律、法规或本协议项下的任何条款而给畅通车友会或任何其他第三人造成损失，用户同意承担由此造成的损害赔偿责任。
6、如用户利用系统差错、故障或其他原因导致的漏洞，损害畅通车友会利益，畅通车友会将终止为该用户提供充值服务，并保留法律追究的权利。
7、畅通车友会负责对畅通车友会中展示的信息进行审核与更新，但并不就信息的时效性、准确性、以及服务功能的完整性和可靠性承担任何义务和赔偿责任。
8、如畅通车友会发现有影响用户信息安全的行为，畅通车友会有权采取措施对用户信息实施保护。
　　畅通车友会对以下情况不做任何承诺，包括但不仅限于下列情况：
9、服务一定能符合您的要求；服务不会受中断；服务的安全性、及时性、完整性和准确性。
10、车主应妥善保管账户、密码等信息资料，因非畅通车友会原因造成您的用户信息泄露，由此给您带来的损失，畅通车友会不承担任何责任。
11、使用畅通车友会服务时，因用户个人原因产生的损失，畅通车友会不承担任何责任。
\n\n四、其他\n\n
1、本协议的订立、执行和解释及争议的解决均应适用中国法律。
2、如双方就本协议内容或其执行发生任何争议，双方应尽量友好协商解决；协商不成时，任何一方均可向有管辖权的中华人民共和国大陆地区法院提起诉讼。畅通车友会保留对协议的最终解释权和修改权。
3、本协议项下所有的通知均可通过重要页面公告、电子邮件或常规的信件传送等方式进行；该等通知于发送之日视为已送达收件人。</string>
    <string name="apply_four_hint">本人保证申请表所填全部资料及所有相关资料真实、合法、有效。为本合约订立及履行之目的，
                        本人授权中国工商银行可以通过金融信用信息基础数据库及其他渠道查询本人相关信息。
                        中国工商银行已依法向本人提示相关条款，对相关概念、内容及法律效果做出说明。 本人知悉并保证遵守《&lt;font color=#13B1F5>中国工商银行牡丹信用卡章程&lt;/font>》（已向银行所取并阅读和知悉）；
                        已阅读并了解《&lt;font color=#13B1F5>牡丹信用卡（个人卡）&lt;/font>》《&lt;font color=#13B1F5>安全用卡须知&lt;/font>》， 自愿遵守合约和协议书（若申请并注册成功）的规定。不论盛情批准与否。
                        本人同意申请表及相关资料均由中国工商银行保留。</string>
    <string name="apply_success_hint">温馨提示:领卡时需&lt;font color=#F53E2A>开通工行e支付,激活预留手机号码&lt;/font>,用于线上违章缴费。</string>
    <string name="recharge">优惠加油</string>
    <string name="annual">年检服务</string>
    <string name="car_evaluate">爱车估价</string>
    <string name="car_wash">驾驶证查分</string>
    <string name="designated_wash">国际驾照</string>
</resources>