<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_base_color"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/ds_204"
        android:layout_height="@dimen/ds_204"
        android:layout_marginTop="@dimen/ds_72"
        android:background="@mipmap/ic_global_app" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ds_45"
        android:textColor="@color/gray_33"
        android:textSize="@dimen/fs_60"
        android:text="@string/main_app_name" />

    <TextView
        android:id="@+id/mine_about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ds_24"
        android:textColor="@color/gray_99"
        android:textSize="@dimen/fs_42"
        android:text="Version 1.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ds_84"
        android:lineSpacingExtra="@dimen/ds_24"
        android:paddingLeft="@dimen/ds_54"
        android:paddingRight="@dimen/ds_54"
        android:textSize="@dimen/fs_51"
        android:textColor="@color/gray_4d"
        android:text="@string/main_app_about" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/ds_24"
        android:layout_marginTop="@dimen/ds_36"
        android:paddingLeft="@dimen/ds_54"
        android:paddingRight="@dimen/ds_54"
        android:textSize="@dimen/fs_51"
        android:textColor="@color/gray_4d"
        android:text="@string/main_app_about_2" />

</LinearLayout>