<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:paddingTop="@dimen/res_y_20">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_license"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/res_y_10"
            android:drawableTop="@mipmap/icon_license"
            android:gravity="center"
            android:text="@string/car_wash"
            android:textColor="@color/colorTvBlack_4d"/>

        <TextView
            android:id="@+id/tv_appraisement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/res_y_10"
            android:drawableTop="@mipmap/icon_2hand"
            android:gravity="center"
            android:text="@string/car_evaluate"
            android:textColor="@color/colorTvBlack_4d"/>

        <TextView
            android:id="@+id/tv_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/res_y_10"
            android:drawableTop="@mipmap/icon_check"
            android:gravity="center"
            android:text="@string/annual"
            android:textColor="@color/colorTvBlack_4d"/>

        <TextView
            android:id="@+id/tv_drive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/res_y_10"
            android:drawableTop="@mipmap/ic_carwash"
            android:gravity="center"
            android:text="@string/designated_wash"
            android:textColor="@color/colorTvBlack_4d"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/res_y_20"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_oil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/res_y_10"
            android:drawableTop="@mipmap/icon_oil"
            android:gravity="center"
            android:text="@string/recharge"
            android:textColor="@color/colorTvBlack_4d"/>

        <TextView
            android:id="@+id/tv_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/res_y_10"
            android:drawableTop="@mipmap/icon_map"
            android:gravity="center"
            android:text="年检地图"
            android:textColor="@color/colorTvBlack_4d"/>

        <TextView
            android:id="@+id/tv_vehicle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/res_y_10"
            android:drawableTop="@mipmap/icon_guide"
            android:gravity="center"
            android:text="车管所指南"
            android:textColor="@color/colorTvBlack_4d"/>

        <TextView
            android:id="@+id/tv_roadside"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/res_y_10"
            android:drawableTop="@mipmap/icon_help"
            android:gravity="center"
            android:text="道路救援"
            android:textColor="@color/colorTvBlack_4d"/>

    </TableRow>
</TableLayout>
