<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:paddingTop="@dimen/ds_36">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_oil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/ds_18"
            android:drawableTop="@mipmap/icon_oil"
            android:gravity="center"
            android:text="@string/recharge"
            android:textColor="@color/colorTvBlack_4d"/>

        <TextView
            android:id="@+id/tv_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/ds_18"
            android:drawableTop="@mipmap/icon_map"
            android:gravity="center"
            android:text="年检地图"
            android:textColor="@color/colorTvBlack_4d"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/ds_18"
            android:drawableTop="@mipmap/icon_2hand"
            android:gravity="center"
            android:text="@string/car_evaluate"
            android:textColor="@color/colorTvBlack_4d"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/ds_18"
            android:drawableTop="@mipmap/icon_check"
            android:gravity="center"
            android:text="@string/annual"
            android:textColor="@color/colorTvBlack_4d"
            android:visibility="invisible"/>

    </TableRow>
</TableLayout>